      directory \file{doc/manual}).
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{qt(*, log.p=TRUE)} in outer tails no longer produces
      \code{NaN} in its final steps, thus fixing \PR{18360}.

      \item \code{tools::Rd2latex()} now escapes hashes and ampersands
      when writing URLs, fixing LaTeX errors with such URLs in \verb{\tabular}.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.2.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item New function \code{utils::findCRANmirror()} to find out if a
      \acronym{CRAN} mirror has been selected, otherwise fallback to
      the main site.  This behaves in the same way as
      \code{tools::CRAN_package_db()} and is intended for packages
      wishing to access \acronym{CRAN} for purposes other than
      installing packages.

      The need for this was shown by a day when the main \acronym{CRAN}
      website was offline and a dozen or so packages which had its URL
      hardcoded failed their checks.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item The libraries searched for by \option{--with-blas} (without
      a value) now include BLIS (after OpenBLAS but before ATLAS).  And
      on macOS, the Accelerate framework (after ATLAS).  (This is
      patterned after the \code{AX_BLAS} macro from the Autoconf Archive.)

      \item The included LAPACK sources have been updated to 3.10.1.
    }
  }
  \subsection{UTILITIES}{
    \itemize{
      \item The (full path to) the command \command{tidy} to be used for
      HTML validation can be set by environment variable \env{R_TIDYCMD}.

      \item Setting environment variable
      \env{_R_CHECK_RD_VALIDATE_RD2HTML_} to a false value will override
      \command{R CMD check --as-cran} and turn off HTML validation.
      This provides a way to circumvent a problematic \command{tidy}.

      The 2006 version that ships with macOS is always skipped.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{